# celor

./: .gitignore  Makefile  README.md  config.json  pyproject.toml
benchmark/: analyze_patterns.py  generate_ground_truth.py  generate_manifests.py  generate_plots.py  run_benchmark.py  validate_manifests.py
benchmark/fixbank/: .celor-fixes.json
benchmark/ground_truth/: case_001_fixed.yaml  case_001_metadata.json  case_001_violations.json  case_002_fixed.yaml  case_002_metadata.json  case_002_violations.json  case_003_fixed.yaml  case_003_metadata.json  case_003_violations.json  case_004_fixed.yaml  case_004_metadata.json  case_004_violations.json  case_005_fixed.yaml  case_005_metadata.json  case_005_violations.json  case_006_fixed.yaml  case_006_metadata.json  case_006_violations.json  case_007_fixed.yaml  case_007_metadata.json  case_007_violations.json  case_008_fixed.yaml  case_008_metadata.json  case_008_violations.json  case_009_fixed.yaml  case_009_metadata.json  case_009_violations.json  case_010_fixed.yaml  case_010_metadata.json  case_010_violations.json  case_011_fixed.yaml  case_011_metadata.json  case_011_violations.json  case_012_fixed.yaml  case_012_metadata.json  case_012_violations.json  case_013_fixed.yaml  case_013_metadata.json  case_013_violations.json  case_014_fixed.yaml  (+260 more)
benchmark/manifests/: case_001.yaml  case_002.yaml  case_003.yaml  case_004.yaml  case_005.yaml  case_006.yaml  case_007.yaml  case_008.yaml  case_009.yaml  case_010.yaml  case_011.yaml  (+89 more)
celor/: __init__.py
docs/: conf.py  getting_started.rst  index.rst
tests/: __init__.py
(+80 files in other folders)
